# UC-hereariim-blossom

./: .stestr.conf  Jenkinsfile  README.md  rclone.conf  requirements.txt  setup.cfg  tox.ini
.github/workflows/: main.yml
blossom/: api.py  client_secrets.json  config.py  path.py  utils.py
blossom/dataset/: make_dataset.py
blossom/features/: build_features.py
blossom/models/: deep_api.py  mycreds.txt
blossom/tests/: test_unit_model.py
blossom/visualization/: visualize.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-blossom_start.ipynb
