# -*- coding: utf-8 -*-
[metadata]
name = blossom
summary = We suggest a 2D image segmentation model based on UNET algorithm to segment images with blossoming apple tree
description-file =
    README.md
author = Herearii Metuarea
author-email = herearii.metuarea@gmail.com
version = 0.0.1
license = MIT
home-page = https://github.com/hereariim/blossom
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    blossom

[entry_points]
deepaas.v2.model = 
    blossom = blossom.api

